# AGPT_2DGameEngine

./: CMakeLists.txt
Source/: main.cpp  main.h
Source/Engine/: PapyrusEngine.cpp  PapyrusEngine.h  Singleton.h
Source/Engine/BaseComponent/: BaseComponent.h
Source/Engine/Commands/: KeyboardMoveCommand.h
Source/Engine/Components/: TextComponent.cpp  TextComponent.h
Source/Engine/Components/AnimationComponent/: AnimationComponent.cpp  AnimationComponent.h
Source/Engine/Components/BoxColliderComponent/: BoxColliderComponent.cpp  BoxColliderComponent.h
Source/Engine/Components/BulletComponent/: BulletComponent.cpp  BulletComponent.h
Source/Engine/Components/DroneMovementComponent/: DroneMovementComponent.cpp  DroneMovementComponent.h
Source/Engine/Components/EnemyBulletComponent/: EnemyBulletComponent.cpp  EnemyBulletComponent.h
Source/Engine/Components/EnemySpawnComponent/: EnemySpawnComponent.cpp  EnemySpawnComponent.h
Source/Engine/Components/ExplosionComponent/: ExplosionComponent.cpp  ExplosionComponent.h
Source/Engine/Components/LonerShooterComponent/: LonerShooterComponent.cpp  LonerShooterComponent.h
Source/Engine/Components/MoveComponent/: MoveComponent.cpp  MoveComponent.h
Source/Engine/Components/MoveDownComponent/: MoveDownComponent.cpp  MoveDownComponent.h
Source/Engine/Components/MoveHorizontalComponent/: MoveHorizontalComponent.cpp  MoveHorizontalComponent.h
Source/Engine/Components/MoveVerticalComponent/: MoveVerticalComponent.cpp  MoveVerticalComponent.h
Source/Engine/Components/PhysicsBodyComponent/: PhysicsBodyComponent.cpp  PhysicsBodyComponent.h
Source/Engine/Components/PlayerAnimationComponent/: PlayerAnimationComponent.cpp  PlayerAnimationComponent.h
Source/Engine/Components/RigidBodyComponent/: RigidBodyComponent.cpp
Source/Engine/Components/TextureComponent/: TextureComponent.cpp  TextureComponent.h
Source/Engine/Components/VerticalParallaxComponent/: VerticalParallaxComponent.cpp  VerticalParallaxComponent.h
Source/Engine/Core/: PapyrusAPI.h  PapyrusEngine.cpp  PapyrusEngine.h
Source/Engine/GameObject/: GameObject.cpp  GameObject.h
Source/Engine/InputManager/: Command.h  InputManager.cpp  InputManager.h
Source/Engine/InputManager/Controller/: Controller.cpp  Controller.h
Source/Engine/PhysicsManager/: PhysicsManager.cpp  PhysicsManager.h
Source/Engine/Renderer/: Renderer.cpp  Renderer.h
Source/Engine/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Source/Engine/Scene/: Scene.cpp  Scene.h
Source/Engine/SceneManager/: SceneManager.cpp  SceneManager.h
Source/Engine/Texture2D/: Texture2D.cpp  Texture2D.h
Source/Engine/Util/: CollisionSize.cpp  CollisionSize.h  ExplosionUtility.cpp  ExplosionUtility.h  Transform.h
Source/Engine/Window/: Window.cpp  Window.h
Source/Game/: main.cpp  main.h
Source/Game/Components/AnimationComponent/: AnimationComponent.cpp  AnimationComponent.h
Source/Game/Components/AsteroidSplittingComponent/: AsteroidSplittingComponent.cpp  AsteroidSplittingComponent.h
Source/Game/Components/BulletComponent/: BulletComponent.cpp  BulletComponent.h
Source/Game/Components/CompanionBehaviorComponent/: CompanionBehaviorComponent.cpp  CompanionBehaviorComponent.h
Source/Game/Components/DecideCollisionComponent/: DecideCollisionComponent.cpp  DecideCollisionComponent.h
Source/Game/Components/DroneMovementComponent/: DroneMovementComponent.cpp  DroneMovementComponent.h
Source/Game/Components/EnemyBulletComponent/: EnemyBulletComponent.cpp  EnemyBulletComponent.h
Source/Game/Components/EnemySpawnComponent/: EnemySpawnComponent.cpp  EnemySpawnComponent.h
Source/Game/Components/ExplosionComponent/: ExplosionComponent.cpp  ExplosionComponent.h
Source/Game/Components/HealthBarComponent/: HealthBarComponent.cpp  HealthBarComponent.h
Source/Game/Components/HealthComponent/: HealthComponent.h  HealthUIComponent.cpp  HealthUIComponent.h
Source/Game/Components/LonerShooterComponent/: LonerShooterComponent.cpp  LonerShooterComponent.h
Source/Game/Components/MoveComponent/: MoveComponent.cpp  MoveComponent.h
Source/Game/Components/MoveHorizontalComponent/: MoveHorizontalComponent.cpp  MoveHorizontalComponent.h
Source/Game/Components/MoveVerticalComponent/: MoveVerticalComponent.cpp  MoveVerticalComponent.h
Source/Game/Components/PowerUpSpawnComponent/: PowerUpSpawnComponent.cpp  PowerUpSpawnComponent.h
Source/Game/Components/UpdateUIScoreComponent/: HighScoreComponent.cpp  HighScoreComponent.h  UpdateUIScoreComponent.cpp  UpdateUIScoreComponent.h
Source/Game/Components/Util/: ExplosionUtility.cpp  ExplosionUtility.h
Source/Game/Components/VerticalParallaxComponent/: VerticalParallaxComponent.cpp  VerticalParallaxComponent.h
